# Soyouz

./: .gitignore  Makefile.am  README.md  Soyouz.sln  Soyouz.vcxproj  autogen.sh  configure.ac
Config/: plugins.cfg  plugins_d.cfg  resources.cfg  system.xml
Content/: temp.material  temp.program
Content/Core/Compositors/: DeferredShading.compositor  PostProcess.compositor  Render.compositor
Content/Core/Materials/: Default.material  DeferredShading.material  DeferredShading.program  Glow.material  JetFlow.material  Lighting.material  M_Glossy.material  M_Master.material  M_NormalGlossy.material  Master.material  Particle.material  PostProcess.material  Render.material  Shaders.program  ShadowCaster.material  ShadowCaster.program  deferred_post.material  deferred_post.program
Content/Core/PostProcess/: PostProcess.compositor  PostProcess.material
Content/Core/Programs/: DeferredShading.program  Master.program  PostProcess.program  Render.program  ShadowCaster.program
Content/Core/Shaders/: PS_Add.glsl  PS_Ambient.glsl  PS_Blur.glsl  PS_BoxFilter.glsl  PS_BumpMapSpecular.glsl  PS_BumpShadowReceiver.glsl  PS_Colormap.glsl  PS_CreaseShading.glsl  PS_Emissive.glsl  PS_FXAA.glsl  PS_Glossy.glsl  PS_Glow.glsl  PS_JetFlow.glsl  PS_LightMaterial.glsl  PS_Master.glsl  PS_Mul.glsl  PS_NormalGlossy.glsl  PS_Passthrough.glsl  PS_SSAO.glsl  PS_ShadowCaster.glsl  PS_ShowColour.cg  PS_ShowColour.glsl  PS_ShowDS.cg  PS_ShowDS.glsl  PS_ShowGBuffer.glsl  ShowGlow_ps.cg  VS_Ambient.glsl  VS_BumpMapSpecular.glsl  VS_BumpShadowReceiver.glsl  VS_Glossy.glsl  VS_LightMaterial.cg  VS_LightMaterial.glsl  VS_Master.glsl  VS_NormalGlossy.glsl  VS_ShadowCaster.glsl  VS_UVMap.glsl
Content/Data/Ships/: Hammer.xml
Content/Debug/Materials/: AAA.material  MI_Airlock.material  MI_Crate.material  MI_Exhaust.material  MI_Gloss.material  MI_NormalGloss.material  MI_zCrate.material  Penguin.material  Smoke.material  UVTest.material  sibenik.material
Content/Debug/Mesh/: Airlock.mesh  crate.mesh
Content/Debug/Models/: cone.mesh  core.blend  core.mesh  core2.blend  core2.mesh  sphere.mesh  teapot.mesh  testbed.mesh
Content/Debug/Particles/: Smoke.particle
Content/DeferredShadingMedia/: deferred.compositor  deferred_post.material  deferred_post.program  deferreddemo.material  ssao.cg  ssao.compositor  ssao.material
Content/Game/Engines/: SM_Engine_2_Mod1.blend  SM_Engine_2_Mod1.mesh  SM_Exhaust.blend
Content/Game/Engines/Materials/: MI_Engine_2_Mod1.material  MI_Exhaust.material
Content/Game/Environment/: SM_Planet.blend  SM_Planet.mesh
Content/Game/Environment/Materials/: MI_Earth.material
Content/Game/Materials/: MI_APC.material  MI_Exhaust.material  Sky.material
Content/Game/Models/: SM_APC.blend  SM_APC.mesh  SM_APC2.blend  SM_Bullet.blend  SM_Bullet.mesh  SM_Exhaust.blend  SM_Exhaust.mesh  SM_Soyouz.blend  SM_Soyouz.mesh
Content/Game/Models/Source/: DECO_Cover.blend  DECO_Grate.blend
Content/Game/Ships/: SM_APC.blend  SM_APC.mesh  SM_Sovereign.mesh
Content/Game/Ships/Materials/: MI_APC.material  MI_Sovereign.material
Content/Game/Weapons/: SM_Bullet.blend  SM_Bullet.mesh  canon_barrel.mesh  canon_base.mesh  canon_turret.mesh  machinegun.blend
Content/Game/Weapons/Materials/: MI_Bullet.material
Content/Generic/: M_Main.material  PS_Main.hlsl  VS_Main.hlsl
Content/Generic/Materials/: M_Color.material  M_Main.material  Material.material
Content/Generic/Shaders/: Color_D.hlsl  Main_D.hlsl  Main_N.hlsl
Content/Templates/Ships/: Hammer.xml  Sovereign.xml
Ogre/: README.txt
Sources/: main.cpp  test.cpp  test.h
Sources/Editor/: editor.cpp  editor.hpp  user.cpp  user.hpp
Sources/Engine/: actor.cpp  actor.h  actor.hpp  bullet.hpp  bulletphysics.hpp  componentactor.cpp  componentactor.hpp  dirlightactor.cpp  dirlightactor.hpp  engine.h  engine.hpp  game.cpp  game.hpp  gametypes.hpp  iomanager.cpp  iomanager.h  iomanager.hpp  lightactor.cpp  lightactor.hpp  meshactor.cpp  meshactor.hpp  ogre.hpp  player.cpp  player.h  player.hpp  pointlight.cpp  pointlight.hpp  savable.cpp  savable.hpp  world.cpp  world.h  world.hpp
Sources/Engine/DeferredShading/: AmbientLight.cpp  AmbientLight.h  DLight.cpp  DLight.h  DeferredLightCP.cpp  DeferredLightCP.h  DeferredShading.cpp  DeferredShading.h  DeferredShadingDemo.h  GBufferMaterialGenerator.cpp  GBufferSchemeHandler.cpp  LightMaterialGenerator.cpp  ListenerFactoryLogic.h  MaterialGenerator.h  NullSchemeHandler.h  SSAOLogic.h  SharedData.h
Sources/Engine/Rendering/: AmbientLight.cpp  AmbientLight.h  DLight.cpp  DLight.h  DeferredLightCP.cpp  DeferredLightCP.h  GeomUtils.cpp  LightMaterialGenerator.cpp  MaterialGenerator.cpp  MaterialGenerator.h  ambient.cpp  ambient.hpp  deferredlight.cpp  deferredlight.hpp  geometry.cpp  geometry.hpp  lightmaterial.cpp  lightmaterial.hpp  renderer.cpp  renderer.hpp  renderoperation.cpp  renderoperation.hpp  ssaolistener.cpp  ssaolistener.hpp
Sources/Game/: bullet.cpp  bullet.hpp  demoPlayer.hpp  demoWorld.hpp  engine.cpp  engine.hpp  machinegun.cpp  machinegun.hpp  orbitSegment.cpp  orbitSegment.hpp  pilot.cpp  pilot.hpp  ship.cpp  ship.hpp  testPlayer.cpp  testPlayer.h  testPlayer.hpp  testWorld.cpp  testWorld.h  testWorld.hpp  thruster.cpp  thruster.hpp  weapon.cpp  weapon.hpp
